--- a/index.html
+++ b/index.html
@@ -16,42 +16,60 @@
         <link rel="stylesheet" href="./styles/reset.css" />
         <link rel="stylesheet" href="./styles/main.css" />
     </head>
-    <body>
+    <body class="home">
         <div class="layout">
             <section class="layout__hero">Hero</section>
 
-            <section class="layout__content">Content</section>
+            <main class="layout__content">
+                <section class="home__blurb">
+                    <div class="text-flow">
+                        <h3>Os governos mudam, as pessoas e as indústrias permanecem.</h3>
+                        <p>
+                            A OTT é uma organização de empresas e trabalhadores da hotelaria de
+                            Trancoso com propósito de, em parceria com o setor público, auxiliar no
+                            planejamento cívico de longo prazo através do compartilhamento da
+                            experiência do setor e conhecimento local. O objetivo é garantir o
+                            desenvolvimento sustentável do turismo, atraindo para a comunidade o
+                            máximo de investimentos e oportunidades econômicas, ao mesmo tempo
+                            protegendo a qualidade de vida por meio de melhores práticas de
+                            conservação e preservação cultural.
+                        </p>
+                    </div>
+                </section>
+            </main>
 
             <section class="layout__footer">
                 <footer class="footer">
-                    <div class="footer__email">
-                        <div class="footer__email-icon">
-                            <svg
-                                width="24"
-                                height="24"
-                                viewBox="0 0 24 24"
-                                fill="none"
-                                xmlns="http://www.w3.org/2000/svg"
-                            >
-                                <g clip-path="url(#clip0_76_20)">
-                                    <path
-                                        d="M19 22H5C3.67392 22 2.40215 21.4732 1.46447 20.5355C0.526784 19.5979 0 18.3261 0 17L0 7C0 5.67392 0.526784 4.40215 1.46447 3.46447C2.40215 2.52678 3.67392 2 5 2H19C19.6566 2 20.3068 2.12933 20.9134 2.3806C21.52 2.63188 22.0712 3.00017 22.5355 3.46447C22.9998 3.92876 23.3681 4.47995 23.6194 5.08658C23.8707 5.69321 24 6.34339 24 7V17C24 17.6566 23.8707 18.3068 23.6194 18.9134C23.3681 19.52 22.9998 20.0712 22.5355 20.5355C22.0712 20.9998 21.52 21.3681 20.9134 21.6194C20.3068 21.8707 19.6566 22 19 22ZM5 4C4.20435 4 3.44129 4.31607 2.87868 4.87868C2.31607 5.44129 2 6.20435 2 7V17C2 17.7956 2.31607 18.5587 2.87868 19.1213C3.44129 19.6839 4.20435 20 5 20H19C19.7956 20 20.5587 19.6839 21.1213 19.1213C21.6839 18.5587 22 17.7956 22 17V7C22 6.20435 21.6839 5.44129 21.1213 4.87868C20.5587 4.31607 19.7956 4 19 4H5Z"
-                                        fill="#F5F0EB"
-                                    />
-                                    <path
-                                        d="M11.9847 13.2711C11.3174 13.271 10.6569 13.1374 10.0421 12.878C9.42723 12.6187 8.87052 12.2389 8.40474 11.7611L1.55474 4.76107C1.36776 4.57144 1.26377 4.3153 1.26565 4.049C1.26753 3.78269 1.37511 3.52804 1.56474 3.34107C1.75437 3.15409 2.01051 3.0501 2.27681 3.05197C2.54311 3.05385 2.79776 3.16144 2.98474 3.35107L9.82474 10.3511C10.3987 10.9142 11.1707 11.2296 11.9747 11.2296C12.7788 11.2296 13.5508 10.9142 14.1247 10.3511L20.9647 3.35107C21.0567 3.25651 21.1663 3.18099 21.2874 3.12882C21.4085 3.07664 21.5387 3.04883 21.6706 3.04697C21.8025 3.04512 21.9334 3.06925 22.0559 3.11799C22.1785 3.16674 22.2902 3.23914 22.3847 3.33107C22.4793 3.42299 22.5548 3.53264 22.607 3.65375C22.6592 3.77486 22.687 3.90506 22.6888 4.03692C22.6907 4.16878 22.6666 4.29972 22.6178 4.42225C22.5691 4.54478 22.4967 4.65651 22.4047 4.75107L15.5547 11.7511C15.091 12.2295 14.5363 12.6105 13.9232 12.8715C13.3101 13.1325 12.6511 13.2684 11.9847 13.2711Z"
-                                        fill="#F5F0EB"
-                                    />
-                                </g>
-                                <defs>
-                                    <clipPath id="clip0_76_20">
-                                        <rect width="24" height="24" fill="white" />
-                                    </clipPath>
-                                </defs>
-                            </svg>
-                        </div>
+                    <div class="text-flow">
+                        <div class="footer__email">
+                            <div class="footer__email-icon">
+                                <svg
+                                    width="24"
+                                    height="24"
+                                    viewBox="0 0 24 24"
+                                    fill="none"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                >
+                                    <g clip-path="url(#clip0_76_20)">
+                                        <path
+                                            d="M19 22H5C3.67392 22 2.40215 21.4732 1.46447 20.5355C0.526784 19.5979 0 18.3261 0 17L0 7C0 5.67392 0.526784 4.40215 1.46447 3.46447C2.40215 2.52678 3.67392 2 5 2H19C19.6566 2 20.3068 2.12933 20.9134 2.3806C21.52 2.63188 22.0712 3.00017 22.5355 3.46447C22.9998 3.92876 23.3681 4.47995 23.6194 5.08658C23.8707 5.69321 24 6.34339 24 7V17C24 17.6566 23.8707 18.3068 23.6194 18.9134C23.3681 19.52 22.9998 20.0712 22.5355 20.5355C22.0712 20.9998 21.52 21.3681 20.9134 21.6194C20.3068 21.8707 19.6566 22 19 22ZM5 4C4.20435 4 3.44129 4.31607 2.87868 4.87868C2.31607 5.44129 2 6.20435 2 7V17C2 17.7956 2.31607 18.5587 2.87868 19.1213C3.44129 19.6839 4.20435 20 5 20H19C19.7956 20 20.5587 19.6839 21.1213 19.1213C21.6839 18.5587 22 17.7956 22 17V7C22 6.20435 21.6839 5.44129 21.1213 4.87868C20.5587 4.31607 19.7956 4 19 4H5Z"
+                                            fill="#F5F0EB"
+                                        />
+                                        <path
+                                            d="M11.9847 13.2711C11.3174 13.271 10.6569 13.1374 10.0421 12.878C9.42723 12.6187 8.87052 12.2389 8.40474 11.7611L1.55474 4.76107C1.36776 4.57144 1.26377 4.3153 1.26565 4.049C1.26753 3.78269 1.37511 3.52804 1.56474 3.34107C1.75437 3.15409 2.01051 3.0501 2.27681 3.05197C2.54311 3.05385 2.79776 3.16144 2.98474 3.35107L9.82474 10.3511C10.3987 10.9142 11.1707 11.2296 11.9747 11.2296C12.7788 11.2296 13.5508 10.9142 14.1247 10.3511L20.9647 3.35107C21.0567 3.25651 21.1663 3.18099 21.2874 3.12882C21.4085 3.07664 21.5387 3.04883 21.6706 3.04697C21.8025 3.04512 21.9334 3.06925 22.0559 3.11799C22.1785 3.16674 22.2902 3.23914 22.3847 3.33107C22.4793 3.42299 22.5548 3.53264 22.607 3.65375C22.6592 3.77486 22.687 3.90506 22.6888 4.03692C22.6907 4.16878 22.6666 4.29972 22.6178 4.42225C22.5691 4.54478 22.4967 4.65651 22.4047 4.75107L15.5547 11.7511C15.091 12.2295 14.5363 12.6105 13.9232 12.8715C13.3101 13.1325 12.6511 13.2684 11.9847 13.2711Z"
+                                            fill="#F5F0EB"
+                                        />
+                                    </g>
+                                    <defs>
+                                        <clipPath id="clip0_76_20">
+                                            <rect width="24" height="24" fill="white" />
+                                        </clipPath>
+                                    </defs>
+                                </svg>
+                            </div>
 
-                        <a href="mailto:turismo@trancoso.org">turismo@trancoso.org</a>
+                            <a href="mailto:turismo@trancoso.org">turismo@trancoso.org</a>
+                        </div>
                     </div>
                 </footer>
             </section>
