--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
                         </p>
                     </div>
                 </section>
+                <section class="home__check-out">
+                    <div class="text-flow">
+                        <a href="#" class="btn">Confira o nosso manifesto</a>
+                    </div>
+                </section>
             </main>
 
             <section class="layout__footer">
