--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@
     </head>
     <body class="home">
         <div class="layout">
-            <section class="layout__hero">Hero</section>
+            <section class="layout__hero">
+                <div class="hero">
+                    <a href="/">
+                        <picture>
+                            <source media="(min-resolution: 2x)" srcset="/logo@2x.png" />
+                            <img src="/logo.png" alt="Organização Turismo de Trancoso" />
+                        </picture>
+                    </a>
+                </div>
+            </section>
 
             <main class="layout__content">
                 <section class="home__blurb">
@@ -73,7 +82,9 @@
                                 </svg>
                             </div>
 
-                            <a href="mailto:turismo@trancoso.org">turismo@trancoso.org</a>
+                            <a href="mailto:turismo@trancoso.org" target="_blank">
+                                turismo@trancoso.org
+                            </a>
                         </div>
                     </div>
                 </footer>
