add meta desc and manifesto page

--- a/manifesto.html
+++ b/manifesto.html
@@ -53,7 +53,7 @@
                 </section>
                 <section class="home__check-out">
                     <div class="text-flow">
-                        <a href="/manifesto" class="btn">Confira o nosso manifesto</a>
+                        <a href="#" class="btn">Confira o nosso manifesto</a>
                     </div>
                 </section>
             </main>
