export manifesto page

--- a/manifesto.html
+++ b/manifesto.html
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="./styles/reset.css" />
         <link rel="stylesheet" href="./styles/main.css" />
     </head>
-    <body class="home">
+    <body class="manifesto">
         <div class="layout">
             <section class="layout__hero">
                 <div class="hero">
@@ -36,24 +36,172 @@
             </section>
 
             <main class="layout__content">
-                <section class="home__blurb">
+                <section class="manifesto__copy">
                     <div class="text-flow">
-                        <h3>Os governos mudam, as pessoas e as indústrias permanecem.</h3>
-                        <p>
-                            A OTT é uma organização de empresas e trabalhadores da hotelaria de
-                            Trancoso com propósito de, em parceria com o setor público, auxiliar no
-                            planejamento cívico de longo prazo através do compartilhamento da
-                            experiência do setor e conhecimento local. O objetivo é garantir o
-                            desenvolvimento sustentável do turismo, atraindo para a comunidade o
-                            máximo de investimentos e oportunidades econômicas, ao mesmo tempo
-                            protegendo a qualidade de vida por meio de melhores práticas de
-                            conservação e preservação cultural.
+                        <h1>Valores da OTT - Organização Turismo de Trancoso</h1>
+
+                        <p class="headline">
+                            O turismo pode ser extremamente edificante. Quando bem administrada,
+                            esta indústria pode ser catalisadora da recuperação de recursos naturais
+                            e do patrimônio cultural, protegendo a autenticidade de um destino e
+                            maximizando oportunidades econômicas a longo prazo para todos,
+                            garantindo simultaneamente qualidade de vida para a comunidade local e
+                            experiências de qualidade para visitantes. A seguir, os valores de
+                            planejamento sustentável com os quais os membros da OTT estão
+                            comprometidos, e que são de interesse de seus sócios, clientes,
+                            funcionários e da comunidade em que estão inseridos.
                         </p>
-                    </div>
-                </section>
-                <section class="home__check-out">
-                    <div class="text-flow">
-                        <a href="#" class="btn">Confira o nosso manifesto</a>
+
+                        <ul>
+                            <li>
+                                O verde vale ouro. A presença de árvores e vegetação abundante
+                                define Trancoso, limpa o ar, ameniza a temperatura e esconde seu
+                                crescimento urbano. O verde é nosso passado e nosso futuro.
+                            </li>
+                            <li>
+                                Áreas centrais livres de carros são um símbolo de urbanismo verde ao
+                                redor no mundo, não só em destinos turísticos como em capitais
+                                globais em busca de melhor qualidade de vida. Turistas
+                                <strong>contam</strong> com isso.
+                            </li>
+                            <li>
+                                Quanto menos trânsito de veículos motorizados em áreas de alto
+                                impacto turístico, maior é o potencial turístico de longo prazo.
+                            </li>
+                            <li>
+                                Áreas de estacionamento nunca foram cruciais em certos espaços, como
+                                o Quadrado, mesmo com o crescimento exponencial da atividade
+                                comercial e da valorização imobiliária, o que deixa claro que a
+                                delimitação de áreas de estacionamento no entorno do centro
+                                histórico não deve ser fator determinante no planejamento urbano, e
+                                sim a meta de respeitar a atmosfera histórica e garantir opções
+                                seguras e agradáveis a pedestres.
+                            </li>
+                            <li>
+                                Desenvolvimento de soluções de estacionamento fora das vias públicas
+                                em todas as áreas de Trancoso, não exclusivamente no centro
+                                histórico, deve ser uma prioridade conforme a cidade cresce e o
+                                número de carros aumenta.
+                            </li>
+                            <li>
+                                Caminhar é saudável, não poluente, consistente com uma atmosfera
+                                histórica e promove o consumo e a expansão do centro comercial de
+                                Trancoso.
+                            </li>
+                            <li>
+                                O ciclismo deve ser incentivado, seguro e conveniente, não uma
+                                atividade cheia de riscos, e estacionamentos para bicicletas devem
+                                ser gratuitos e seguros.
+                            </li>
+                            <li>
+                                Calçadas e ciclovias são investimentos que se pagam através do
+                                aumento da qualidade de vida urbana e redução da poluição. Trancoso
+                                deve se posicionar como um líder brasileiro, conectando seus bairros
+                                mais vitais e áreas de interesse econômico e turístico por meio de
+                                “corredores verdes”. <strong>Caminhos de Trancoso</strong> deve ser
+                                uma nova iniciativa essencial, tanto de mobilidade urbana como de
+                                trilhas esportivas.
+                            </li>
+                            <li>
+                                Quando veículos motorizados forem necessários, deve-se optar
+                                preferencialmente por opções elétricas.
+                            </li>
+                            <li>
+                                Nenhuma cidade jamais se arrependeu da criação de parques. A cidade
+                                e empreendedores devem planejar uma séries de espaços verdes e
+                                recreativos, florestas e jardins urbanos, assim como instalações
+                                esportivas, todos conectados por ciclovias (uma taxa de turismo bem
+                                divulgada e dedicada exclusivamente a financiar este planejamento,
+                                por exemplo, seria um excelente e muito positivo atrativo comercial
+                                para Trancoso).
+                            </li>
+                            <li>
+                                O Bosque é tão importante para o futuro de Trancoso quanto o
+                                Quadrado. Em um distrito cada vez mais urbanizado sua existência
+                                como um jardim/floresta urbana (seu propósito original) protegido é
+                                inestimável como parte do DNA de turismo sustentável de Trancoso, e
+                                pode valorizar toda a área em seu entorno.
+                            </li>
+                            <li>
+                                A administração de destinos históricos e naturais inclui o domínio
+                                da arte de “esconder” trânsito, lixo, redes de energia, telefonia e
+                                caixas d'água. Esta deve ser uma prioridade aperfeiçoada ano após
+                                ano a fim de restaurar a atmosfera histórica de Trancoso que lhe
+                                torna mais apto a competir globalmente pelo turismo.
+                            </li>
+                            <li>
+                                Em uma era digital, cartazes e placas não são necessários.
+                                Sinalização comercial deve ter inspiração local e contribuir com a
+                                criação de uma atmosfera rústica.
+                            </li>
+                            <li>
+                                Poluição luminosa e sonora são facilmente evitáveis com planejamento
+                                e investimento, especialmente com a adoção de novas tecnologias.
+                            </li>
+                            <li>
+                                Viajantes e agentes de viagens procuram, pagam por e esperam um
+                                ambiente tranquilo nas férias. A poluição sonora destrói não só o
+                                turismo, mas a saúde e a qualidade de vida dos moradores, e deve ser
+                                evitada com profissionalismo como em todos os destinos de qualidade.
+                                Este é um ponto de consenso no setor de hospitalidade em todo o
+                                mundo, e não controverso, portanto não é necessário que a OTT
+                                dedique-se a esta questão a não ser para estabelecer exemplos
+                                responsáveis de gestão de eventos.
+                            </li>
+                            <li>
+                                A saúde dos rios e canais de Trancoso é vital para o seu futuro e
+                                fundamental para nossa biodiversidade e beleza de nossa paisagem,
+                                além de oferecer ricas oportunidades de esportes de aventura muito
+                                procurados por residentes e turistas. O compromisso com a
+                                conservação das bacias hidrográficas locais é também um compromisso
+                                com a qualidade das nossas praias, cruciais para o bem-estar de
+                                todos.
+                            </li>
+                            <li>
+                                É um erro converter espaços públicos (parques, ruas e calçadas) em
+                                áreas comerciais para atividades econômicas informais. Vai de
+                                encontro a tendências globais de turismo sustentável e é contra os
+                                interesses de longo prazo da comunidade local, criando um aspecto
+                                indesejado de turismo de massa/<em>over-tourism</em> no destino.
+                            </li>
+                            <li>
+                                Assim como em todos os principais destinos turísticos, a atividade
+                                de ambulantes deve ser supervisionada com normas para dias, horas e
+                                produtos, além de incentivar a venda de produtos artesanais em lojas
+                                e boutiques.
+                            </li>
+                            <li>
+                                A presença de lojas, comércio e atendimento de qualidade é um
+                                aspecto essencial do turismo. Reduzir a atividade comercial
+                                excessiva em espaços públicos incentivará investimentos privados no
+                                setor de lojas e butiques, auxiliando o crescimento do setor
+                                artesanal em Trancoso, profissionalizando-o e criando crescimento de
+                                empregos a longo prazo, além de uma economia de exportação do design
+                                e artes de Trancoso.
+                            </li>
+                            <li>
+                                A OTT valoriza as festas religiosas tradicionais, considerando-as
+                                pilares do patrimônio cultural local, porém atenta que o
+                                envolvimento do Município traz cada vez mais riscos de
+                                transformá-las em “eventos municipais”, substituindo tradição por
+                                aspectos políticos e comerciais que diluem a identidade cultural
+                                única de Trancoso e seu apelo turístico especial.
+                            </li>
+                            <li>
+                                Em todo o mundo, destinos históricos e de natureza sensíveis estão
+                                discutindo o tema de capacidade máxima de visitantes. Para um melhor
+                                crescimento econômico de Trancoso e proteção a seu patrimônio é
+                                necessário o incentivo ao turismo de pernoite e estadias longas em
+                                vez de visitas bate e volta.
+                            </li>
+                            <li>
+                                A fama de Trancoso está alicerçada em sua identidade acolhedora,
+                                assim, lojas pop up, ativações de marcas e ações patrocinadas por
+                                marcas são bem vindas, mas com a expectativa de cuidado especial com
+                                a identidade e valores de Trancoso e região, além da prosperidade a
+                                longo prazo da comunidade.
+                            </li>
+                        </ul>
                     </div>
                 </section>
             </main>
