--- a/manifesto.html
+++ b/manifesto.html
@@ -10,6 +10,9 @@
             content="Saiba mais sobre metas e planos para o desenvolvimento sustentável e crescimento econômico de Trancoso."
         />
 
+        <!-- Opengraph -->
+        <meta property=”og:image” content=”/og.jpeg“ />
+
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
