add link back to home

--- a/manifesto.html
+++ b/manifesto.html
@@ -205,6 +205,10 @@
                                 longo prazo da comunidade.
                             </li>
                         </ul>
+
+                        <hr />
+
+                        <p><a href="/">&larr; Voltar à página inicial</a></p>
                     </div>
                 </section>
             </main>
