use absolute url for manifesto og:image

--- a/manifesto.html
+++ b/manifesto.html
@@ -11,7 +11,7 @@
         />
 
         <!-- Opengraph -->
-        <meta property=”og:image” content=”/og.jpeg“ />
+        <meta property="og:image" content="%BASE_URL%og.jpeg" />
 
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
