--- a/manifesto.html
+++ b/manifesto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,7 +11,7 @@
         />
 
         <!-- Opengraph -->
-        <meta property="og:image" content="%BASE_URL%og.jpeg" />
+        <meta property="og:image" content="/og.jpeg" />
 
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
