--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <!-- Opengraph -->
         <meta property="og:image" content="%BASE_URL%og.jpeg" />
 
+        <!-- Favicon -->
+        <link rel="shortcut icon" href="%BASE_URL%favicon.svg" type="image/svg+xml" />
+
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
