--- a/manifesto.html
+++ b/manifesto.html
@@ -33,10 +33,13 @@
             <section class="layout__hero">
                 <div class="hero">
                     <a href="/">
-                        <picture>
-                            <source media="(min-resolution: 2x)" srcset="/logo@2x.png" />
-                            <img src="/logo.png" alt="Organização Turismo de Trancoso" />
-                        </picture>
+                        <img
+                            class="hero__logo"
+                            src="/logo.svg"
+                            alt="OTT - Organização Turismo de Trancoso"
+                            width="453.95"
+                            height="205.7"
+                        />
                     </a>
                 </div>
             </section>
