update logo and home text

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <main class="layout__content">
                 <section class="home__blurb">
                     <div class="text-flow">
-                        <h3>Os governos mudam, as pessoas e as indústrias permanecem.</h3>
+                        <h3>Governos mudam, comunidades permanecem.</h3>
                         <p>
-                            A OTT é uma organização de empresas e trabalhadores da hotelaria de
+                            A OTT é uma organização de empresas e trabalhadores da hospitalidade de
                             Trancoso com propósito de, em parceria com o setor público, auxiliar no
                             planejamento cívico de longo prazo através do compartilhamento da
                             experiência do setor e conhecimento local. O objetivo é garantir o
