--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Wix+Madefor+Display:wght@400..800&display=swap"
             rel="stylesheet"
         />
 
